--- a/Bible-Lexicon-DB.html
+++ b/Bible-Lexicon-DB.html
@@ -3,20 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Lexicon Reference</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 </head>
-<body>
-    <div class="container">
-        <label class="d-flex">
-            <input type="text" class="input m-1">
-            <button type="button" class="btn btn-primary"></button>
-        </label>
-
-
+<body class="container">
+<div class="card mb-3 col-8 row">
+    <div class="card-body">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4 d-flex justify-content-center">BMA Lexicon</h1>
+                <p class="lead">Welcome to the newest full-reference Lexicon on the web, where you can find any most
+                    references to the greek language. </p>
+            </div>
+        </div>
+        <div>
+            <label class="d-flex justify-content-center">
+                <input type="text" class="input m-1" placeholder="Strong's numbers search">
+                <button type="button" class="btn btn-outline-primary">Submit</button>
+            </label>
+        </div>
+        <div>
+            <label class="d-flex justify-content-center">
+                <input type="text" class="input m-1" placeholder="Name search">
+                <button type="button" class="btn btn-outline-primary">Submit</button>
+            </label>
+        </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
