--- a/Bible-Lexicon-DB.html
+++ b/Bible-Lexicon-DB.html
@@ -7,32 +7,35 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="Bible-Lexicon-DB.css">
 
+
 </head>
-<body class="container">
-<div class="card mb-3 col-8 row">
+<body class="container d-flex justify-content-center">
+<div class="card mb-3 col-12 row">
     <div class="card-body">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4 d-flex justify-content-center">BMA Lexicon</h1>
-                <p class="lead">Welcome to the newest full-reference Lexicon on the web, where you can find any most
-                    references to the greek language. </p>
+                <p class="lead">Welcome to the newest full-reference Lexicon on the web, where you can find most
+                    references to the Greek language. </p>
             </div>
         </div>
         <div>
-            <label class="d-flex justify-content-center">
-                <input type="text" class="input m-1" placeholder="Strong's numbers search">
-                <button type="button" class="btn btn-outline-primary">Submit</button>
+            <label class="d-flex justify-content-center m-1">
+                <input type="text" class="input" placeholder="Strong's numbers">
+                <button type="button" class="btn btn-outline-primary m-1">Submit</button>
             </label>
         </div>
         <div>
-            <label class="d-flex justify-content-center">
-                <input type="text" class="input m-1" placeholder="Name search">
-                <button type="button" class="btn btn-outline-primary">Submit</button>
+            <label class="d-flex justify-content-center m-1">
+                <input type="text" class="input" placeholder="Name's">
+                <button type="button" class="btn btn-outline-primary m-1">Submit</button>
             </label>
         </div>
     </div>
+    <div class="card"></div>
 </div>
-<div class="card"></div>
+
+<script src="keys.js"></script>
 <script src="js/JQuery.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
         integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
