worked on search input and button click

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         </div>
         <div>
             <label class="d-flex justify-content-center m-1">
-                <input type="text" class="input" placeholder="Strong's numbers">
-                <button type="button" class="btn btn-outline-primary m-1">Submit</button>
+                <input type="text" class="input" id="strongs" placeholder="Strong's numbers">
+                <button onclick="onClick(this)" type="button" id="btn1" class="btn btn-outline-primary m-1">Submit</button>
             </label>
         </div>
         <div>
             <label class="d-flex justify-content-center m-1">
-                <input type="text" class="input" placeholder="Name's">
-                <button type="button" class="btn btn-outline-primary m-1">Submit</button>
+                <input type="text" class="input" id="names" placeholder="Name's">
+                <button onclick="onClick(this)" type="button" id="btn2" class="btn btn-outline-primary m-1">Submit</button>
             </label>
         </div>
     </div>
