--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Bible-Lexicon-DB.css">
 
 
+
 </head>
 <body class="container d-flex justify-content-center">
 <div class="card mb-3 col-12 row">
@@ -34,7 +35,7 @@
     </div>
     <div class="card"></div>
 </div>
-
+<script src="require.js"></script>
 <script src="js/keys.js"></script>
 <script src="js/JQuery.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
